Fix little jump between transitions

--- a/src/stylesheets/components/_club-creation.scss
+++ b/src/stylesheets/components/_club-creation.scss
@@ -12,6 +12,10 @@
       @include grid-column(12);
     }
 
+    img {
+      margin-bottom: 10px;
+    }
+
     h1 {
       font-size: 24px;
       font-weight: 100;
